# flask_limit

./: .gitignore  AUTHORS  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  intro.rst
flask_limit/: __init__.py  rate_limit.py
flask_limit/limiters/: __init__.py  exceptions.py  limiters.py
src/flask_limit/: rate_limit.py
tests/: test_rate_limit.py  test_rate_limiter.py
