[metadata]
name = Flask_Limit
version = 2.0.1
author = Tabot Kevin
author_email = tabot.kevin@gmail.com
license = MIT
description = An extension that provides rate limiting for Flask routes.
long_description = file: README.md
long_description_content_type = text/markdown 
url = https://github.com/tabotkevin/flask_limit
project_urls =
    Bug Tracker = https://github.com/tabotkevin/flask_limit/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = flask_limit
packages = find_namespace:
python_requires = >=3.6
install_requires =
    Flask >= 2.3.2
    Flask-Redis >= 0.4.0

[options.packages.find]
where = flask_limit
